# provenquant-trader

./: .env.template  .gitignore  CLAUDE.md  LICENSE.md  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh  status.sh  stop.sh
backend/: main.py  pyproject.toml  tasks.py  trade_executer.py  trader.py
backend/alembic/: env.py
backend/alembic/versions/: 249b525d118d_clean_slate.py  a1b2c3d4e5f6_add_trade_reasons.py  a1b2c3d4e5f6_redesign_strategy_models.py  b2c3d4e5f6a7_add_tp_sl_to_positions.py  b2c3d4e5f6a7_market_data_tables.py  b373ab63da2a_initial.py  c3d4e5f6a7b8_paper_trade_exchange_account.py  c3d4e5f6a7b8_remove_strategy_name_unique.py  d4e5f6a7b8c9_add_leverage_market_type.py  d4e5f6a7b8c9_strategy_config_is_paper.py  e5f6a7b8c9d0_remove_tick_subscribe_from_assets.py  e5f6a7b8c9d0_rename_symbol_trade_history.py  f6a7b8c9d0e1_add_timeout_to_positions.py
backend/app/api/: __init__.py  auth.py  exchange_accounts.py  market_data.py  positions.py  settings.py  strategies.py  trade_history.py  trades.py  watched_assets.py  ws.py
backend/app/core/: auth.py  celery_app.py  celery_config.py  enums.py  limiter.py  settings.py
backend/app/db/: base.py  session.py
backend/app/services/: exchange_account_service.py  internal_data_fetcher.py  strategy_context.py  strategy_executer.py  strategy_executer_manager.py  symbol_validator.py  (+4 more)
backend/strategies/: example_pair_trade.py  example_rsi.py  example_switch_side_on_period.py  gamma_scalping.py  multi_blade_meta_labeling_model_strategy.py  switch_side_on_period.py
backend/tests/: conftest.py
(+92 files in other folders)
