[tool.poetry]
name = "provenquant-trader"
version = "0.1.0"
description = "Standalone crypto paper-trading system"
authors = ["Sukrit Sunama <sunama.sukrit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
fastapi = {extras = ["standard"], version = "^0.129.0"}
celery = {extras = ["librabbitmq", "redis"], version = "^5.6.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.18.0"
asyncpg = "^0.31.0"
psycopg = "^3.3.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
ccxt = "^4.5.0"
websockets = "^13.0"
httpx = "^0.28.0"
typer = "^0.24.0"
flower = "^2.0.0"
pandas = "^2.3.0"
numpy = "^2.3.0"
pytz = "^2025.2"
slowapi = ">=0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require running Redis/Postgres (deselect with -m 'not integration')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
